--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="this is my portfolio website">
     <title>ThandePortfolio</title>
-     <!-- <style>
-      /* body{
-        /* background-color:rgb(187, 185, 252); */
-     }
-      </style>  */ -->
   </head>
   <body>
     <div id="root"></div>
